[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/enemies/Level1/tobirama_edo_nzc_sheet_by_frank14kilate_d6gll9_by_gogeta10_d6k5wqk-fullview.png" type="Texture" id=1]
[ext_resource path="res://tobirama.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/Level1/77.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/Level1/101.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/Level1/79.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/Level1/117.png" type="Texture" id=9]
[ext_resource path="res://assets/enemies/Level1/108.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/Level1/80.png" type="Texture" id=11]
[ext_resource path="res://assets/enemies/Level1/109.png" type="Texture" id=12]
[ext_resource path="res://assets/enemies/Level1/76.png" type="Texture" id=13]
[ext_resource path="res://assets/enemies/Level1/102.png" type="Texture" id=14]
[ext_resource path="res://assets/enemies/Level1/118.png" type="Texture" id=15]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=16]
[ext_resource path="res://Music and Sounds/Hurt.ogg" type="AudioStream" id=17]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2363, 50, 95 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 2363, 50, 95 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 114, 2363, 56, 95 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 185, 2363, 59, 95 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 241, 2337, 59, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 2337, 59, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 355, 2337, 77, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 2337, 77, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 520, 2372, 76, 95 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 598, 2372, 60, 95 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 658, 2372, 60, 95 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 660, 42, 93 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 42, 660, 42, 93 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 84, 660, 42, 93 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 126, 660, 42, 93 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1012, 73, 77 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 73, 1012, 73, 77 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 146, 1012, 73, 77 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 219, 1012, 73, 77 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 292, 1012, 73, 77 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 365, 1012, 73, 77 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 15 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 23.0
height = 40.0

[sub_resource type="CircleShape2D" id=20]
radius = 175.003

[sub_resource type="CircleShape2D" id=25]
radius = 107.075

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 8.5, 31.25 )

[sub_resource type="CapsuleShape2D" id=27]
height = 0.241554

[node name="tobirama" type="KinematicBody2D"]
position = Vector2( 109, 107 )
collision_layer = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 35, 48 )
frames = SubResource( 18 )
animation = "Fall"
speed_scale = 0.929

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 49 )
shape = SubResource( 19 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 22, 31 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="attack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( 34, 50 )
shape = SubResource( 20 )

[node name="jump" type="Area2D" parent="."]
position = Vector2( 30, 50 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump"]
position = Vector2( 1, 0 )
shape = SubResource( 25 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 37.5, 55.25 )
shape = SubResource( 26 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 39.5, 90 )
scale = Vector2( 1.03125, 0.6 )
texture = ExtResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 16 )]
collision_mask = 6

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.705882, 0.0666667, 0.0666667, 1 )
position = Vector2( 35, 52 )
rotation = -1.56918
scale = Vector2( 0.622918, 3.02231 )
shape = SubResource( 27 )
one_way_collision_margin = 2.0

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = 11.965

[node name="Health" type="ColorRect" parent="."]
margin_left = 26.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 4.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Red" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.41954, 0.452638, 0.457031, 1 )

[node name="Bar" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="jump" to="." method="_on_jump_body_entered"]
[connection signal="body_exited" from="jump" to="." method="_on_jump_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
